tests/integration/snapshots/integration__conformance__n_number_0_capital_e.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[0E]
stdout ---

stderr ---
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:4
  |
1 | [0E]
  |   -^
  |   |
  |   exponent found here
  |
help: remove the exponent
  |
1 - [0E]
1 + [0]
  |
help: insert a placeholder digit
  |
1 | [0E5]
  |    +
